# ait-native

./: .ait-github-publish-ignore  .aitignore  .gitignore  .ignore  LICENSE  NOTICE  PKG-INFO  README.md  README.pypi.md  ait.sh  aitk.sh  pyproject.toml
Formula/: ait-native.rb
LICENSES/: AGPL-3.0-only.txt  LicenseRef-AIT-Commercial.txt
ci/: config.contract.json
docs/: COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  GITHUB_RELEASE_PUBLISHING.md  HOMEBREW_TAP.md  LOCAL_DEVELOPMENT.md  LOCAL_QUICKSTART.md  PACKAGE_TARGETS.md  PYPI_PUBLISHING.md  SELF_HOSTED_TEAM_DEPLOYMENT.md  THIRD_PARTY_NOTICES.md  TRADEMARK_POLICY.md  public_compatibility_matrix.json  public_contributor_workflow_contract.json  public_demo_data_contract.json  public_local_quickstart_contract.json  public_package_targets_contract.json  public_repository_retirement_contract.json  public_self_hosted_deployment_contract.json  public_whitepaper_contract.json  public_whitepaper_patent_gate_contract.json
scripts/: check_agent_health.py  check_markdown_links.py  check_plan_cli_contracts.py  check_tg1_required_cases.py  export_task_test_case_backfill_json.py  github_publish.sh  github_release_publish.sh  m3_physical_fanout.py  official_site_https.py  postgres_content_exceptions_audit.py  postgres_content_history_rebuild_plan.py  postgres_freeze_window_report.py  postgres_lines_rebuild_plan.py  postgres_payload_lineage_audit.py  postgres_remote_task_test_case_links.py  postgres_repo_id_cleanup_plan.py  postgres_repo_id_row_count_validation.py  postgres_repo_id_smoke_checks.py  postgres_repo_name_inventory.py  postgres_repositories_rebuild_plan.py  postgres_repository_foundation_indexes_plan.py  postgres_repository_group_memberships_rebuild_plan.py  postgres_resolve_unmatched_task_test_cases.py  postgres_test_case_inventory.py  postgres_workflow_children_rebuild_plan.py  postgres_workflow_root_constraints_plan.py  postgres_workflow_roots_rebuild_plan.py  runtime_backup.py  task_linked_case_matrix.py
sql/: ait_native_postgres_content_schema.sql  ait_native_postgres_control_schema.sql  tg1_required_live_pytest_node_ids.sql
tests/: _ram_root.py  conftest.py  postgres_fake.py  postgres_live.py  test_agent_health_check_script.py  test_ait_agent_cli.py  test_ait_agent_envelope.py  test_ait_agent_supervisor_cli.py  test_ait_server_live_turns.py  test_aitk_export.py  test_aitk_filters.py  test_aitk_launcher.py  test_aitk_layout.py  test_aitk_provenance.py  test_aitk_tcl_assets.py  test_authority_store.py  test_check_tg1_required_cases_script.py  test_ci_suite_contract.py  test_codex_app_server.py  test_community_auth.py  test_cross_root_decoupling_contract.py  test_dev_deployment_static.py  test_directory_decoupling_docs_routing_reconciliation.py  test_directory_decoupling_wave_10_validation.py  test_directory_decoupling_wave_11_validation.py  test_directory_decoupling_wave_12_validation.py  (+155 more)
(+414 files in other folders)
