[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ait-native"
version = "0.10.6"
description = "ait native local repository, sync, review, policy, landing, and PostgreSQL-ready runtime prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13,<15",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "websockets>=12,<17",
  "cryptography>=42,<47"
]

[project.scripts]
ait = "ait.cli:app"
ait-server = "ait_server.app:main"
ait-worker = "ait_server.worker:main"
ait-web = "ait_web.app:main"
ait-agent = "ait_agent.cli:main"
aitk = "ait_tk.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2,<4.0"
]
test = [
  "pytest>=8,<10",
  "pytest-xdist>=3,<4"
]

[tool.pytest.ini_options]
addopts = "-n 3 --dist loadfile"
pythonpath = [
  "src",
]
